fix: Removed logs and changed burger menu z-index

--- a/src/components/home/BurgerMenu.css
+++ b/src/components/home/BurgerMenu.css
@@ -5,6 +5,7 @@
     height: 30px;
     left: 10px;
     top: 10px;
+    z-index: 50;
   }
   
   /* Color/shape of burger icon bars */
